fix layout and spacing

--- a/mathesar_ui/src/component-library/tutorial/Tutorial.scss
+++ b/mathesar_ui/src/component-library/tutorial/Tutorial.scss
@@ -23,7 +23,6 @@
       var(--stormy-500) 100%
     );
     opacity: 0.2;
-    z-index: 0;
   }
 
   .content {
@@ -31,7 +30,6 @@
     width: 100%;
     padding: var(--size-base) 0;
     position: relative;
-    z-index: 1;
   }
 
   > * + * {
